@@ -1,4 +1,7 @@
 [CR/LF]
+
+- Fix: int 21h/250ah bug, always maps memory to the beginning of the selector.
+
 ===============================================================================
 Ver 1.01 - 2024-09-25
 ===============================================================================
